<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/details_scroll_view">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <!--Title of the Movie-->
        <TextView
            android:id="@+id/title_label_text_view"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/label_title"/>

        <TextView
            android:id="@+id/title_text_view"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"/>

        <!--Year of the Movie-->
        <TextView
            android:id="@+id/year_label_text_view"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_year"/>

        <TextView
            android:id="@+id/year_text_view"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"/>

        <!--Director of the Movie-->
        <TextView
            android:id="@+id/director_label_text_view"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_director"/>

        <TextView
            android:id="@+id/director_text_view"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"/>

        <!--Genre of the Movie-->
        <TextView
            android:id="@+id/genre_label_text_view"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/label_genre"/>

        <TextView
            android:id="@+id/genre_text_view"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"/>

        <!--Rating of the Movie-->
        <TextView
            android:id="@+id/rating_label_text_view"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/label_rating"/>

        <TextView
            android:id="@+id/rating_text_view"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"/>
    </GridLayout>
</ScrollView>