<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--TextEdit for the Movie's title-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_text_input_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_title"
                    android:hint="@string/hint_title_required"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <!--TextEdit for the Movie's Year-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/year_text_input_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_year"
                    android:hint="@string/hint_year"
                    android:imeOptions="actionNext"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <!--TextEdit for the Movie's Director-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/director_text_input_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_director"
                    android:hint="@string/hint_director"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <!--TextEdit for the Movie's Genre-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genre_text_input_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_genre"
                    android:hint="@string/hint_genre"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <!--TextEdit for the Movie's Rating-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rating_text_input_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_rating"
                    android:hint="@string/hint_rating"
                    android:imeOptions="actionDone"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_save"/>
</FrameLayout>
